--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -237,7 +237,13 @@ The choice depends on the individual use case.
 \section{Motivation}
 Despite the huge diversity to formulate constraints and validate them on RDF data, most of the DSCLs require the major shortcoming of redundancy. For illustration, consider e.g., the existential restriction \ms{Jedi $\sqsubseteq$ $\exists$ hasJediWaepon . JediWeapon} that stated that every Jedi has at least one Jedi weapon. Furthermore, we know that Luke is a Jedi (\ms{Jedi(Luke)}) having a blue laser sword (\ms{hasLaserSword(Luke, BlueLaserSword)}. Since all of the DSCLs are based on the closed-world assumption (CWA) and as long as it isn't explicitly defined that a blue laser sword is a Jedi weapon (\ms{JediWeapon(BlueLaserSword)}), the existential restriction causes a constraint violation.
 
-But if we express the mentioned constraints in OWL and apply a reasoner before the proper constraint validation is performed, we won't get a constraint violation because all implicit statements like a blue laser sword is a Jedi weapon (\ms{JediWeapon(BlueLaserSword)}) will be inferred. At a first glance, using OWL as constraint language the shortcoming of redundancy is solved. However, on closer consideration OWL is by default an insufficient choice because OWL is in contrast based on the open-world assumption (OWA)\tb{we have to state here the difference of OWA dn CWA}, i.e. a statement cannot be inferred to be false on the basis of failures to prove it. Additionally, in OWL we have the non-unique name assumption (nUNA) whereas RDF validation requires that different names represent different objects (also known as unique name assumption (UNA)).
+But if we express the mentioned constraints in OWL and apply a reasoner before the proper constraint validation is performed, we won't get a constraint violation because all implicit statements like a blue laser sword is a Jedi weapon (\ms{JediWeapon(BlueLaserSword)}) will be inferred. At a first glance, using OWL as constraint language the shortcoming of redundancy is solved. However, on closer consideration OWL is by default an insufficient choice because OWL is in contrast based on the open-world assumption (OWA), i.e. a statement cannot be inferred to be false on the basis of failures to prove it. 
+This semantics is suitable for the distributed knowledge representation scenarios on the Semantic Web, 
+where usually the knowledge about the domain comes from distributed
+sources and a complete knowledge about the domain cannot be assumed, 
+but makes it difficult to use OWL for RDF validation.
+Additionally, in OWL we have the non-unique name assumption (nUNA) whereas RDF validation requires that different names represent different objects (also known as unique name assumption (UNA)).
+This ambiguousness in semantics is one of the main reasons why OWL has not been adopted as standard DSCL for RDF validation in the past. 
 
 Let us address these opposites via an example. Consider e.g., the following definition of the knowledge base $\mathcal{K}$:
 \begin{eqnarray*}
@@ -253,40 +259,37 @@ In case of the OWA, we infer that $\ms{Anakin}$ has a father that is a $\ms{Pers
 
 If we follow the principle of adopting the UNA to OWL and performing contraint validation after some reasoning, the opposites of OWA in OWL and CWA in constraint validation doesn't affect each other, because missing assertions like in the example mentioned above will cause still some constraint violations but the implicit knowledge is even considered on constraint validation.
 
-
-
-
-\tb{1 simple example in motivation section}
+\tb{maybe next paragraph in front}
 
 OWL is based on a knowledge representation formalism with different complexity, but is created as a language which can be seen as a constraint language.
 Constraint validation does not appear to be part of the services provided by OWL.  
 This has lead to claims that OWL cannot be used for constraint validation. 
-There are long and controversial discussions\footnote{\url{http://lists.w3.org/Archives/Public/public-data-shapes-wg/}, \url{https://www.jiscmail.ac.uk/cgi-bin/webadmin?A0=dc-architecture}} in the W3C and DCMI WGs if OWL should be used for RDF validation.
-There are lots of pros and cons using OWL in order to formulate and to validate RDF constraints.
+and there are long and controversial discussions\footnote{\url{http://lists.w3.org/Archives/Public/public-data-shapes-wg/}, \url{https://www.jiscmail.ac.uk/cgi-bin/webadmin?A0=dc-architecture}} in the W3C and DCMI WGs if OWL should be used for RDF validation.
 OWL is an instantiation of a high-level and very expressive DSCL with a compact human-readable syntax.
 OWL is a language that many people already know.
 In practice, many people use RDFS and OWL constructs to tell other people and applications about how valid instances should be created.
 Normally, RDF documents follow the structure of RDFS/OWL ontologies. 
 Thus, part of those declarations will be defined anyway and can therefore be reused for validating these RDF documents.
-The standard semantics of OWL is:
 
-\begin{itemize}
-	\item Open World Assumptions (OWA): a statement cannot be inferred to be false on the basis of failures to prove it.
-  \item non-Unique Name Assumptions (nUNA): two different names may refer to the same object.
-\end{itemize}
+%The standard semantics of OWL is:
+%
+%\begin{itemize}
+	%\item Open World Assumptions (OWA): a statement cannot be inferred to be false on the basis of failures to prove it.
+  %\item non-Unique Name Assumptions (nUNA): two different names may refer to the same object.
+%\end{itemize}
+%
+%This semantics is suitable for the distributed knowledge representation scenarios on the Semantic Web, 
+%where usually the knowledge about the domain comes from distributed
+%sources and a complete knowledge about the domain cannot be assumed, 
+%but makes it difficult to use OWL for RDF validation.
 
-This semantics is suitable for the distributed knowledge representation scenarios on the Semantic Web, 
-where usually the knowledge about the domain comes from distributed
-sources and a complete knowledge about the domain cannot be assumed, 
-but makes it difficult to use OWL for RDF validation.
-
-Although, most people don’t care about open world semantics, 
-ambiguousness is one of the main reasons why OWL has not been adopted as standard DSCL for RDF validation in the past. 
-When OWL would be used assuming both OWA (for reasoning) and CWA (for constraint validation),
-it would be somewhat confusing to have two completely different semantics for OWL.
-On the other hand, OWL constraints could be interpreted either with the OWA to support open
-world reasoning, and exactly the same piece can also be interpreted in closed world
-applications as a constraint. 
+%Although, most people don’t care about open world semantics, 
+%ambiguousness is one of the main reasons why OWL has not been adopted as standard DSCL for RDF validation in the past. 
+%When OWL would be used assuming both OWA (for reasoning) and CWA (for constraint validation),
+%it would be somewhat confusing to have two completely different semantics for OWL.
+%On the other hand, OWL constraints could be interpreted either with the OWA to support open
+%world reasoning, and exactly the same piece can also be interpreted in closed world
+%applications as a constraint. 
 
 You can't easily use OWL to even do cardinality checking. 
 For example, suppose you assert that \ms{hasFather} is a functional property, and you have the triples \ms{Luke hasFather Anakin} and \ms{Luke hasFather Darth}.
