work on motivation section

--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -350,20 +350,18 @@ If we follow the principle of adopting the UNA to OWL and performing contraint v
 	%\item there is no query rewriting mechanism for OWL 2, just for OWL 2 QL
 %\end{itemize}
 
-\textcolor{red}{high-level description of expressivity}
+In this paper, we investigate the expressivity, the complexity, and the user-friendliness of each constraint language and constraint.
+We take OWL 2 reasoning into account as a pre-validation step which leads to higher complexity.
+In this case, users of validation tools could define which axioms they want to use for their inference rules.
+The validator is then able to determine the complexity class, to show which axioms lead to a higher complexity class, and to recommend how to get to a lower complexity class.
+When stating needed axioms and constraints (without reasoning capabilities), 
+the validator is able determine the expressivity class and thus can recommend which constraint language to use in order to express the wished axioms/constraints. 
+Although, there is a partial ordering of constraint languages of particular expressivity classes, 
+validators may not recommend the constraint language with the highest expressivity of that specific expressivity class.
+The most expressive constraint language may not be as good evaluated regarding user-friendliness as another constraint language, which is less expressive but can also express the needed axioms/constraints.
 
-\textcolor{red}{
-\begin{itemize}
-  \item why is expressivity important for the paper?
-	\item expressivity of query languages like SPARQL?
-	\item expressivity of OWL 2 QL and OWL 2 DL?
-	\item how is expressivity and complexity related?
-\end{itemize}
-}
+ 
 
-\textcolor{red}{high-level description of complexity}
-
-We group each RDF requirement into three complexity classes.
 As case studies are linked to use cases and use cases to requirements, it is known how complex the task is to fulfill use cases and case studies.
 For specific use cases, it can also be determined which of the associated requirements lead to a higher complexity class.
 Imaginable is a system in which use cases can be selected which should be met for particular applications.
@@ -384,8 +382,6 @@ we can determine the complexity of these DSCLs as well.
 If we want to use OWL 2 for RDF validation, we have to ensure that as many requirements for formulating RDF constraints are fulfilled
 and that the computational complexity to formulate these constraints is satisfying.  
 
-\textcolor{red}{research questions and contributions needs to be adapted}
-
 Therefore, we answer five \textbf{research questions}:
 \begin{enumerate}
 	\item Which constraints are expressible by DL and which are only expressible by a query language (e.g Datalog or SPARQL)?
@@ -394,6 +390,9 @@ Therefore, we answer five \textbf{research questions}:
 	\item For which constraints a priori reasoning makes sense and how does reasoning affect their validation?  
 	\item What are the effects on complexity to express these constraints with and without OWL 2 QL and OWL 2 DL reasoning?
 	\item What are the effects on complexity of constraints not expressible by DL but by a query language?
+	
+	\item How does reasoning affect the complexity of axioms and constraint languages?
+	\item How to classify constraints and constraint languages according to expressivity, complexity, and user-friendliness?
 \end{enumerate}
 
 The three \textbf{main contributions} of this paper are:
